# Resume-Job-Fit-Analyzer

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: routes.py
app/core/: config.py  dependencies.py  exceptions.py  logging.py
app/graph/: graph_service.py  models.py
app/ml/embeddings/: sbert_service.py
app/ml/explainability/: explainer.py
app/ml/matching/: pipeline.py  scoring_engine.py
app/ml/ner/: skill_extractor.py
app/models/: domain.py
app/schemas/: resume.py
app/services/: orchestrator.py  resume_parser.py  skill_normalizer.py
app/utils/: file_utils.py  text_cleaning.py
app/vectorstore/: faiss_store.py
data/ontology/: skill_ontology.json
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/analyze/: page.tsx  results-view.tsx
frontend/src/components/: navbar.tsx  theme-toggle.tsx
frontend/src/components/analyzer/: file-upload.tsx  fit-label.tsx  loading-state.tsx  score-bar.tsx  score-circle.tsx  skill-badge.tsx
frontend/src/services/: api.ts
frontend/src/types/: api.ts
scripts/: e2e_test.py
tests/: test_api.py  test_pipeline.py
